// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codec byte goldens (#22) > seed 1: encoded keyframe byte hash 1`] = `
{
  "byteLength": 43100,
  "hash": "e6a50711",
}
`;

exports[`codec byte goldens (#22) > seed 42: encoded keyframe byte hash 1`] = `
{
  "byteLength": 43100,
  "hash": "fe401096",
}
`;

exports[`codec byte goldens (#22) > seed 1337: encoded keyframe byte hash 1`] = `
{
  "byteLength": 43100,
  "hash": "fdfab3ed",
}
`;
